# OneLifeRelief

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TaskDB.db  main.cpp  mianwidget.cpp  mianwidget.h  mianwidget.ui  mianwidget.ui.autosave  sometest.db  style.qss
resource/: icon.qrc
src/: CommonHelper.h  CourseScheduleView.cpp  CourseScheduleView.h  calendarview.cpp  calendarview.h  mainwindow.cpp  mainwindow.h  newtaskwidget.cpp  newtaskwidget.h  schedulecontroller.cpp  schedulecontroller.h  task.cpp  task.h  taskandGoalView.cpp  taskandGoalView.h  taskdb.cpp  taskdb.h  timeline.cpp  timeline.h
src/include/: QTUI.h
src/model/task/: task.cpp  task.h  taskdata.cpp  taskdata.h
src/module/: courseschedule.cpp  courseschedule.h  newtask.cpp  newtask.h  taskandgoal.cpp  taskandgoal.h  timeline.cpp  timeline.h
src/module/courseschedule/: courseschedule.h  courseschedulewidget.h
src/module/mainwindow/: olrmainwindow.cpp  olrmainwindow.h
src/module/newtask/: newtask.cpp
src/module/sqlite/: taskdb.cpp  taskdb.h  taskviewmodel.cpp  taskviewmodel.h
src/module/sqlite/snowflake/: snowflake.cpp
src/module/taskandgoal/: taskandgoal.h
src/module/timeline/: timeline.h
src/sqlite/: export.h  precompiled.h  taskdao.cpp  taskdao.h  taskdatabasecache.cpp  taskdatabasecache.h  taskdb.cpp  taskdb.h  taskviewmodel.cpp  taskviewmodel.h
src/sqlite/model/task/: taskdata.cpp  taskdata.h
src/sqlite/snowflake/: snowflake.h
src/task/: newtask.cpp  newtask.h  task.cpp  task.h
src/utils/: commonhelper.h
src/wigdet/mainwindow/: mainwindow.cpp  mainwindow.h  olrmainwindow.cpp
src/wigdet/mainwindow/functionwindow/courseschedule/: courseschedule.cpp  courseschedule.h  courseschedulewidget.h
src/wigdet/mainwindow/functionwindow/taskandgoal/: taskandgoal.cpp  taskandgoal.h
src/wigdet/mainwindow/functionwindow/timeline/: timeline.cpp  timeline.h
src/wigdet/universalwigdet/newtask/: newtask.cpp  newtask.h
